--- a/Form/Form.html
+++ b/Form/Form.html
@@ -9,6 +9,72 @@
 </head>
 <body>
     
-    <script src="./form.js"></script>
+    <section class="container">
+        <h1>Form</h1>
+        <form action="submit" id="form">
+            <div class="category">
+                <div class="label"><label for="name">Name</label></div>
+                <div class="inputField"><input type="text"></div>
+            </div>
+            <div class="category">
+                <div class="label"><label for="company">Company</label></div>
+                <div class="inputField"><input type="text"></div>
+            </div>
+            <div class="category">
+                <div class="label"><label for="email">E-mail</label></div>
+                <div class="inputField"><input type="email"></div>
+            </div>
+            <div class="category">
+                <div class="label"><label for="selectField">Select Field</label></div>
+                <div class="inputField"><input type="text"></div>
+            </div>
+
+            <div class="category">
+                <div class="label"><label for="radio">Radio Field</label></div>
+                <div class="checkbox">
+                    <div class="align">
+                        <input type="radio" value="selection1">
+                        <label for="selection1">Selection 1</label><br>
+                    </div>
+                    <div class="align">
+                        <input type="radio" value="selection2">
+                        <label for="selection2">Selection 2</label><br>
+                    </div>
+                    <div class="align">
+                        <input type="radio" value="selection3">
+                        <label for="selection2">Selection 3</label><br>
+                    </div>
+                    <div class="align">
+                        <input type="radio" value="selection4">
+                        <label for="selection2">Selection 4</label><br>
+                    </div>
+                </div>
+            </div>
+            <div class="category">
+                <div class="label"><label for="checkbox">Checkbox Field</label></div>
+                <div class="checkbox">
+                    <div class="align">
+                        <input type="checkbox" value="selection1">
+                        <label for="selection1">Selection 1</label><br>
+                    </div>
+                    <div class="align">
+                        <input type="checkbox" value="selection2">
+                        <label for="selection2">Selection 2</label><br>
+                    </div>
+                    <div class="align">
+                        <input type="checkbox" value="selection3">
+                        <label for="selection2">Selection 3</label><br>
+                    </div>
+                    <div class="align">
+                        <input type="checkbox" value="selection4">
+                        <label for="selection2">Selection 4</label><br>
+                    </div>
+                </div>
+            </div>
+            <div class="submit">
+                <input type="submit" value="Submit">
+            </div>
+        </form>
+    </section>
 </body>
 </html>
