--- a/Carousel/Carousel.html
+++ b/Carousel/Carousel.html
@@ -9,23 +9,23 @@
 </head>
 <body>
     
-<div class="container">
+
     <h1>Carousel</h1>
     <div class="carousel-container fade">
 
         <div class="image-container">
             <img id="active" class="image" src="../src/img/Carousel PC/carousel-img01@2x.png">
-            <img class="image" src="../src/img/Carousel PC/carousel-img02@2x.png">
-            <img class="image" src="../src/img/Carousel PC/carousel-img03@2x.png">
-            <img class="image" src="../src/img/Carousel PC/carousel-img04@2x.png">
-            <img class="image" src="../src/img/Carousel PC/carousel-img05@2x.png">
-            <img class="image" src="../src/img/Carousel PC/carousel-img06@2x.png">
+            <img id="not-active" class="image" src="../src/img/Carousel PC/carousel-img02@2x.png">
+            <img id="not-active" class="image" src="../src/img/Carousel PC/carousel-img03@2x.png">
+            <img id="not-active" class="image" src="../src/img/Carousel PC/carousel-img04@2x.png">
+            <img id="not-active" class="image" src="../src/img/Carousel PC/carousel-img05@2x.png">
+            <img id="not-active" class="image" src="../src/img/Carousel PC/carousel-img06@2x.png">
         </div>
-
+        <button class="back"></button>
+        <button class="forward"></button>
     </div>
-    <button class="back"></button>
-    <button class="forward"></button>
-</div>
+
+
 
     <script src="./carousel.js"></script>
 </body>
