--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
             <button class="back"></button>
             <button class="forward"></button>
         </div>
-        <!-- <button class="back"></button>
-        <button class="forward"></button> -->
     <!-- CARD -->
+    <h1>Card</h1>
     <section id="card-section">
         <h2 class="section-title">4 Column card on PC</h2>
         <div class="small-card-container">
@@ -104,7 +103,9 @@
         </div>
     </section>
     <!-- SECTION -->
+   
     <section class="container">
+        <h1>Section</h1>
         <div class="section-card-container1">
             <div id="section-card-image"  class="image1">
                 <img src="../src/img/Section PC/section-img1@2x.png" alt="section-img-1" class="section-image">
